fix: global.css에서 .truncated-text 제거
- trunctate 속성에 이미 text-ellipsis가 포함되어 있어 공통 클래스가 불필요해짐

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,9 +48,6 @@ body {
   .empty-message {
     @apply flex-center m-auto h-full text-center text-sm/4 font-medium text-gray350;
   }
-  .truncated-text {
-    @apply w-full truncate text-ellipsis;
-  }
 }
 
 @layer components {
